2024-02-04 Benedikt Freisen <b.freisen AT gmx.net>

	* device/include/stddef.h:
	  Use >= instead of > for C23 test. (bug #3709)

2024-02-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/scripts/sdcc.nsi:
	  Fix installer creation script for recent pic16 library changes.

2024-02-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asrab/rabmch.c:
	  Back-port error messages from asrab 5.40, patch #473 by D-mo.
	* support/scripts/sdcc.nsi:
	  Fix installer creation script for recent pic16 library changes.

2024-01-31 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/pic16,
	  device/lib/pic16,
	  device/non-free/lib/pic16,
	  src/pic16,
	  device/include/asm/pic16/features.h,
	  device/include/sdcc-lib.h,
	  device/include/setjmp.h,
	  device/include/stdarg.h,
	  device/include/stdint.h,
	  support/regression/tests/float_single.c.in:
	  pic16 refactoring and fixes, parts 1 to 3 and 7 to 10 of patch #472 by Jonathon Hall.

2024-01-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* Merge next branch to trunk.

2024-01-28 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Refactor asmopToBool().
  	* src/mos6502/gen.c:
  	  Improvements to genAnd().

2024-01-27 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c,
	  src/mos6502/ralloc.h:
	  Remove dead references to M6502MASK_REV.

2024-01-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asz80/z80mch.c:
	  Fix bug #3700.

2024-01-27 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/ralloc.c:
	  Small cleanup of m6502_dirtyReg.
   	* src/mos6502/gen.c:
   	  Imporvements to genCmp.

2024-01-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asgb/gbmch.c
	  .version,
	  doc/sdccman.lyx:
	  Export 32-bit addresses from gb assembler (instead of 24-bit).

2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/pdk/gen.c:
	  Fix pdk code generation issues, bug #3697.
	* sdas/asz80/z80mch.c: